[TAIGA-547] Add popup for file upload [TAIGA-497] Camera button support [TAIGA-546] Port image editor to react

--- a/frontend_src/client/components/Footer/Footer.styl
+++ b/frontend_src/client/components/Footer/Footer.styl
@@ -5,7 +5,7 @@
     fixed bottom right
     left sidebar_width
     transition left 0.16s ease
-    z-index 2000
+    //z-index 2000
     // border-top 1px rgba(#000, 0.12) solid
     +mobile()
         font-size 12px
