--- a/frontend_src/client/components/ui/Dropdown/Dropdown.styl
+++ b/frontend_src/client/components/ui/Dropdown/Dropdown.styl
@@ -5,6 +5,7 @@ dd_list_height   = dd_list_inner_height + dd_footer_height
 
 :local(.container)
     position relative
+    z-index 200
 
     &:not(.has-footer)
         :local(.footer)
