--- a/frontend_src/client/containers/App/App.styl
+++ b/frontend_src/client/containers/App/App.styl
@@ -23,7 +23,7 @@
 
 :local(.header)
 	height header_height
-	z-index 1900
+	//z-index 1900
 :local(.subHeader)
 	color theme_text
 
@@ -32,7 +32,7 @@
 	width sidebar_width
 	overflow hidden
 	transition all 0.16s ease
-	z-index 2000
+	//z-index 2000
 
 	+above(rupture.mobile-cutoff)
 		&.is-open
@@ -63,4 +63,4 @@
 	top header_height
 	overflow hidden
 	width sidebar_width
-	z-index 2000
+	//z-index 2000
