--- a/frontend_src/client/pages/Messenger/Messenger.styl
+++ b/frontend_src/client/pages/Messenger/Messenger.styl
@@ -105,7 +105,7 @@ sidebar_width = 250px
 
 :local(.sidebar)
 	position relative
-	z-index 400
+	z-index 100 // z-index changed to 100 from 400, because of modal issue
 	width sidebar_width
 	// border 1px rgba(#000, 0.1) solid
 	border-radius 3px 0 0 3px
