--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -5,7 +5,7 @@
 	padding 0 20px
 	box-shadow 0 2px 4px 0 rgba(#000, 0.12)
 	position relative
-	z-index 500
+	//z-index 500
 
 	.title
 		font-size 16px
