--- a/frontend_src/client/containers/App/base.styl
+++ b/frontend_src/client/containers/App/base.styl
@@ -129,3 +129,17 @@ body
 	width inherit !important
 	height inherit !important
 	text-transform capitalize
+
+.btn-rounded
+	background-color transparent
+	border 1px solid #ccc
+	border-radius 20px
+	color #9F9F9F
+	font-weight bold
+	&:hover
+		color #9F9F9F
+
+.btn-rounded:active, .btn-rounded:focus
+	outline none
+	box-shadow none
+	color #9F9F9F
