--- a/frontend_src/client/containers/App/base.styl
+++ b/frontend_src/client/containers/App/base.styl
@@ -29,6 +29,10 @@
 	justify-content space-around
 .j-between
 	justify-content space-between
+.j-start
+	justify-content flex-start
+.flex-wrap
+	flex-wrap wrap
 
 .flex-center
 	@extends .a-center
