[FIXED] Scroll bar issue in members page [FIXED] Avatar icon

--- a/frontend_src/client/components/Header/Header.styl
+++ b/frontend_src/client/components/Header/Header.styl
@@ -32,8 +32,8 @@
 		// background-color rgba(#000, 0.12)
 
 	.profile-icon
-		width 24px
-		height 24px
+		width 35px //it was 24x24
+		height 35px
 		margin-right 8px
 		&.big
 			width 92px
