--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -27,6 +27,7 @@
 		.header-search-input
 			width 100%
 			padding 5px
+			background-color #FFFFFF
 			color #9B9B9B
 			border 1px solid #E3E7EC
 			border-radius 1px
