--- a/frontend_src/client/pages/PublicMembers/PublicMembers.styl
+++ b/frontend_src/client/pages/PublicMembers/PublicMembers.styl
@@ -1,9 +1,8 @@
 :local(.container)
     color inherit
-    margin 0 24px
+    padding 0 24px
     margin-bottom 50px
-
-	+mobile()
+    +mobile()
         margin-bottom 0
     
     .member-tile
@@ -18,6 +17,10 @@
             border-top 5px solid color_green500
         +mobile()
             margin-left 5%
+        &:last-child:after
+            content ""
+            height 24px
+            display block
     
     .member-image
         height 126px
