--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -26,6 +26,7 @@
 			width auto
 		.header-search-input
 			width 100%
+			height 33px
 			padding 5px
 			background-color #FFFFFF
 			color #9B9B9B
