--- a/frontend_src/client/pages/PublicMembers/PublicMembers.styl
+++ b/frontend_src/client/pages/PublicMembers/PublicMembers.styl
@@ -34,6 +34,7 @@
         .init-chat
             absolute top right 5px
             color #4A4A4A
+            font-size 16px
     
     .member-tile, .member-image
         border-radius 3px
@@ -45,11 +46,14 @@
         overflow hidden
         text-align center
         .username
+            display inline-flex
             margin-top 8px
             margin-bottom 0
             color #4A4A4A
             font-weight 600
             line-height 18px
+        .long
+            animation scrollText 5s linear
         .status
             opacity 0.59
             font-size 10px
@@ -65,3 +69,16 @@
             .username, .status
                 color #FFFFFF
 
+@keyframes scrollText
+    0%
+        transform translateX(0)
+    10%
+        transform translateX(0)
+    45%
+        transform translateX(calc(-100% + 140px))
+    55%
+        transform translateX(calc(-100% + 140px))
+    90%
+        transform translateX(0)
+    100%
+        transform translateX(0)
