--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -101,7 +101,7 @@
 						<li><a href="{% url 'myaccount:index' %}">{% trans "My Account" %}</a></li>
 						<li><a href="{% url 'profilesystem:index' %}">{% trans "Profile" %}</a></li>
 						{% if request.user.profile.users_link_visible %}
-						<li><a href="{% url 'publicusers:index' %}">{% trans "Members" %}</a></li>
+						<li><a href="/members/">{% trans "Members" %}</a></li>
 						{% endif %}
 						{% if request.user.profile.groups_link_visible %}
 						<li><a href="{% url 'g:allgroups' %}">{% trans "Groups" %}</a></li>
