--- a/frontend_src/client/containers/App/base.styl
+++ b/frontend_src/client/containers/App/base.styl
@@ -132,7 +132,7 @@ body
 .ui-avatar
 	width inherit !important
 	height inherit !important
-	text-transform capitalize
+	text-transform uppercase
 
 .btn-rounded
 	background-color transparent
