[MOVED] Search and filters to component

--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -69,17 +69,19 @@
 			text-align center
 			border-bottom 1px solid rgba(151,151,151,0.12)
 			color #9B9B9B
-		.filter-button-row
-			margin-top 10px
+		.filter-options-content
+			padding 10px
 		.filter-button
-			width 98.61px
+			width 95px
 			height 28.5px
-			margin 0 10px
+			margin 5px
 			background-color #4A90E2
 			color #FFFFFF
-			box-shadow 0 1px 2px 0 rgba(0,0,0,0.25)
 			border-radius 28px
 			border 1px solid #D4D4D4
+			text-transform capitalize
+			&:hover
+				box-shadow 0 1px 2px 0 rgba(0,0,0,0.25)
 			&:focus
 				outline none
 			&.is-disabled
