--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -80,6 +80,8 @@
 			border-radius 28px
 			border 1px solid #D4D4D4
 			text-transform capitalize
+			&.single
+				width 200px
 			&:hover
 				box-shadow 0 1px 2px 0 rgba(0,0,0,0.25)
 			&:focus
