--- a/templates/sidebar_community.html
+++ b/templates/sidebar_community.html
@@ -2,9 +2,9 @@
 <li class="mainnavcontent"><a href="/members/"><i class="fa fa-users"></i> <span>{% trans "Members" %}</span></a></li>
 {% ifequal SITE_TYPE 'beta' %}
 <li class="mainnavcontent">
-    <a href="/members/">
+    <a href="/groups/">
         <i class="fa fa-users"></i>
-        <span>{% trans "Members" %}</span>
+        <span>{% trans "Groups" %}</span>
     </a>
 </li>
 {% else %}
