--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -62,6 +62,8 @@ b1()
 			bottom -46px
 			border-radius 50%
 			border 2px #fff solid
+			img
+				border-radius 50%
 			// &:after
 			// 	position absolute
 			// 	bottom -20px
@@ -86,6 +88,8 @@ b1()
 				margin-top 0
 				font-size 14px
 				padding 0 20px
+				height 50px
+				overflow hidden
 		.card-action
 			color #fff
 			font-size 20px
