Partial work done on create group

--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -62,6 +62,7 @@ b1()
 			bottom -46px
 			border-radius 50%
 			border 2px #fff solid
+			text-align center
 			img
 				border-radius 50%
 			// &:after
