--- a/frontend_src/client/containers/App/base.styl
+++ b/frontend_src/client/containers/App/base.styl
@@ -31,6 +31,8 @@
 	justify-content space-between
 .j-start
 	justify-content flex-start
+.j-end
+	justify-content flex-end
 .flex-wrap
 	flex-wrap wrap
 
