[FIXED] FF issue

--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -155,6 +155,10 @@ b1()
 				visibility visible
 			.select-option
 				padding 5px
+				margin-top 5px
+				&.selected
+					color #fff
+					background-color theme_primary
 				&:hover
 					cursor pointer
 					color #fff
