--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -3,12 +3,15 @@ b1()
 
 :local(.container)
 	color inherit
-	margin 10px 30px 60px 30px
+	padding 10px 30px 0 30px
+	margin-bottom 60px
+	overflow-y auto
 	clearfix()
 
 	.ui-group-card
 		float left
 		margin 10px
+		padding 0
 		width 300px
 		height 350px
 		background-color #fff
@@ -19,6 +22,7 @@ b1()
 		overflow hidden
 		display flex
 		flex-direction column
+		clearfix()
 
 		+mobile()
 			margin 10px 0
