--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -3,8 +3,8 @@ b1()
 
 :local(.container)
 	color inherit
-	padding 10px 30px 0 30px
-	margin-bottom 60px
+	padding 10px 30px
+	margin-bottom 50px
 	overflow-y auto
 	clearfix()
 
