[TAIGA-565] Set default color by group type

--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -48,6 +48,7 @@ b1()
 			border-width 0 0 1px
 			padding 10px 20px
 			color #fff
+			background-color color_cyan500
 			.name
 				font-size 20px
 				font-weight font_light
@@ -100,35 +101,52 @@ b1()
 				overflow hidden
 		.card-action
 			color #fff
+			background-color color_cyan500
 			font-size 20px
 			text-align center
 			padding 6px 0
-	.ui-group-card
-		&:nth-child(1)
-			.card-header
-				background-color color_blue500
-			.card-action
-				background-color color_blue500
-		&:nth-child(2n)
-			.card-header
-				background-color color_amber500
-			.card-action
-				background-color color_amber500
-		&:nth-child(3n)
-			.card-header
-				background-color color_green500
-			.card-action
-				background-color color_green500
-		&:nth-child(4n)
-			.card-header
-				background-color color_teal500
-			.card-action
-				background-color color_teal500
-		&:nth-child(5n)
-			.card-header
-				background-color color_pink500
-			.card-action
-				background-color color_pink500
+
+	.group-type-art
+		.card-header
+			background-color color_blue500
+		.card-action
+			background-color color_blue500
+	.group-type-activist
+		.card-header
+			background-color color_amber500
+		.card-action
+			background-color color_amber500
+	.group-type-political
+		.card-header
+			background-color color_green500
+		.card-action
+			background-color color_green500
+	.group-type-news
+		.card-header
+			background-color color_teal500
+		.card-action
+			background-color color_teal500
+	.group-type-business
+		.card-header
+			background-color color_blueGrey500
+		.card-action
+			background-color color_blueGrey500
+	.group-type-government
+		.card-header
+			background-color color_brown500
+		.card-action
+			background-color color_brown500
+	.group-type-blog
+		.card-header
+			background-color color_orange500
+		.card-action
+			background-color color_orange500
+	.group-type-nonprofit
+		.card-header
+			background-color color_deepPurple500
+		.card-action
+			background-color color_deepPurple500
+		
 	
 	.form-group
 		position relative
