--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -72,7 +72,8 @@ b1()
 			text-align center
 			img
 				border-radius 50%
-				margin 4px
+				width 100%
+				height 100%
 			// &:after
 			// 	position absolute
 			// 	bottom -20px
