--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -63,6 +63,8 @@ b1()
 			width 92px
 			height 92px
 			background-color #e2e2e2
+			background-position center
+			background-repeat no-repeat
 			position absolute
 			left 50%
 			margin-left -46px
@@ -70,10 +72,10 @@ b1()
 			border-radius 50%
 			border 2px #fff solid
 			text-align center
-			img
-				border-radius 50%
-				width 100%
-				height 100%
+			// img
+			// 	border-radius 50%
+			// 	width 100%
+			// 	height 100%
 			// &:after
 			// 	position absolute
 			// 	bottom -20px
