[TAIGA-570] Missing full breadcrumb

--- a/templates/sidebar_community.html
+++ b/templates/sidebar_community.html
@@ -2,7 +2,7 @@
 <li class="mainnavcontent"><a href="/members/"><i class="fa fa-users"></i> <span>{% trans "Members" %}</span></a></li>
 {% ifequal SITE_TYPE 'beta' %}
 <li class="mainnavcontent">
-    <a href="/groups/">
+    <a href="/community/groups/">
         <i class="fa fa-users"></i>
         <span>{% trans "Groups" %}</span>
     </a>
