--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -25,6 +25,9 @@ b1()
 		display flex
 		flex-direction column
 		clearfix()
+		&:hover
+			.group-header-image
+				transform scale(1.2)
 
 		+mobile()
 			margin 10px 0
@@ -40,15 +43,26 @@ b1()
 
 		.card-inner
 			flex 1
+			position relative
 		.card-header
 			height 100px
 			position relative
-			border-bottom 1px rgba(#000, 0.12) solid
-			b1()
+			//border-bottom 1px rgba(#000, 0.12) solid
+			//b1()
 			border-width 0 0 1px
 			padding 10px 20px
 			color #fff
-			background-color color_cyan500
+			overflow hidden
+			.group-header-image
+				absolute top left
+				width 100%
+				height 100%
+				background-size 100% 100px
+				background-repeat no-repeat
+				opacity 0.3
+				transition transform 0.5s
+			.group-info
+				position absolute
 			.name
 				font-size 20px
 				font-weight font_light
@@ -57,8 +71,18 @@ b1()
 				font-weight font_bold
 				white-space pre-line
 			.unsubscribe
+				position absolute
+				right 15px
 				&:hover
 					text-shadow 2px 3px rgba(0,0,0,0.09)
+			&::before
+				background-color color_cyan500
+				opacity 0.85
+				content ''
+				display block
+				height 100%
+				width 100%
+				absolute top right
 		.card-circle-image
 			width 92px
 			height 92px
@@ -68,7 +92,7 @@ b1()
 			position absolute
 			left 50%
 			margin-left -46px
-			bottom -46px
+			bottom 155px
 			border-radius 50%
 			border 2px #fff solid
 			text-align center
@@ -111,42 +135,50 @@ b1()
 
 	.group-type-art
 		.card-header
-			background-color color_blue500
+			&::before
+				background-color color_blue500
 		.card-action
 			background-color color_blue500
 	.group-type-activist
 		.card-header
-			background-color color_amber500
+			&::before
+				background-color color_amber500
 		.card-action
 			background-color color_amber500
 	.group-type-political
 		.card-header
-			background-color color_green500
+			&::before
+				background-color color_green500
 		.card-action
 			background-color color_green500
 	.group-type-news
 		.card-header
-			background-color color_teal500
+			&::before
+				background-color color_teal500
 		.card-action
 			background-color color_teal500
 	.group-type-business
 		.card-header
-			background-color color_blueGrey500
+			&::before
+				background-color color_blueGrey500
 		.card-action
 			background-color color_blueGrey500
 	.group-type-government
 		.card-header
-			background-color color_brown500
+			&::before
+				background-color color_brown500
 		.card-action
 			background-color color_brown500
 	.group-type-blog
 		.card-header
-			background-color color_orange500
+			&::before
+				background-color color_orange500
 		.card-action
 			background-color color_orange500
 	.group-type-nonprofit
 		.card-header
-			background-color color_deepPurple500
+			&::before
+				background-color color_deepPurple500
 		.card-action
 			background-color color_deepPurple500
 		
