[TAIGA-574] Group card default sort by indexed and then sort by is_member [TAIGA-572] Default group avatar with flat image [TAIGA-573] Missing React Beta ribbon on dev site pages

--- a/templates/react_template.html
+++ b/templates/react_template.html
@@ -40,7 +40,8 @@
                 profile_image: "",
                 {% endif %}
                 profile_avatar_color: "{{ request.user.profile.default_avatar_color }}",
-                date_joined: "{{ request.user.date_joined|date:"M Y" }}"
+                date_joined: "{{ request.user.date_joined|date:"M Y" }}",
+                site_type: "{% ifequal SITE_TYPE 'beta' %}beta{% endifequal %}"
             },
             setonline_url: "{% url 'profilesystem:setonline' %}"
         };
