--- a/frontend_src/client/pages/Groups/Members/Members.styl
+++ b/frontend_src/client/pages/Groups/Members/Members.styl
@@ -83,6 +83,10 @@
 			justify-content flex-end
 		.in-left
 			padding 10px 20px
+			.avatar-image
+				height 42px
+				width 42px
+				margin-right 20px
 			.ui-avatar
 				height 42px !important
 				width 42px !important
