[ADDED] Toggle member role

--- a/frontend_src/client/pages/Groups/Members/Members.styl
+++ b/frontend_src/client/pages/Groups/Members/Members.styl
@@ -112,10 +112,8 @@
 					height 10px
 					content ''
 					border-radius 50%
-				&.is-available:before
+				&.is-online:before
 					background-color color_green500
-				&.is-away:before
-					background-color color_orange500
 
 	.group-item
 		&:nth-child(1)
