--- a/frontend_src/client/pages/ErrorPage/ErrorPage.styl
+++ b/frontend_src/client/pages/ErrorPage/ErrorPage.styl
@@ -1,16 +1,34 @@
 :local(.container)
     display flex
-    flex-direction column
+    flex-direction row
     justify-content center
     align-items center
     height 100%
     margin-bottom 50px
     .error-code
-        color #d3302f
-        font-size 150px
-        margin 0
-        line-height 1
+        width 250px
+        height 250px
+        border-radius 50%
+        background-color rgba(0, 0, 0, 0.12)
+        text-align center
+        p
+            color #d3302f
+            font-size 100px
+            margin 20px 0
+            text-shadow 5px 5px 12px rgba(0, 0, 0, 0.23)
     .error-message
-        margin 0
-        font-size 20px
-        color #979797
+        height 250px
+        padding 70px 0
+        p
+            margin 0 10px
+            font-size 20px
+            color #979797
+        .btn-home
+            margin 10px 100px
+            background-color theme_primary
+            border-radius 20px
+            a
+                color #FFF
+                text-decoration none
+            &:focus
+                outline none
