[TAIGA-583] Group Member status roles retain color [TAIGA-582] Community Member page breadcrumb [TAIGA-581] If group id is empty don't build and show menu [TAIGA-580] Show 403 if page is loaded using react router [TAIGA-572] Default group avatar with flat image

--- a/frontend_src/client/pages/ErrorPage/ErrorPage.styl
+++ b/frontend_src/client/pages/ErrorPage/ErrorPage.styl
@@ -24,11 +24,10 @@
             font-size 20px
             color #979797
         .btn-home
-            margin 10px 100px
+            margin 10px
             background-color theme_primary
             border-radius 20px
-            a
-                color #FFF
-                text-decoration none
+            color #FFF
+            text-decoration none
             &:focus
                 outline none
