--- a/frontend_src/client/pages/Groups/Members/Members.styl
+++ b/frontend_src/client/pages/Groups/Members/Members.styl
@@ -116,21 +116,21 @@
 					background-color color_green500
 
 	.group-item
-		&:nth-child(1)
+		&.group-id-101
 			color color_blue500
-		&:nth-child(2)
+		&.group-id-102
 			color color_pink400
-		&:nth-child(3)
+		&.group-id-103
 			color color_green500
-		&:nth-child(4)
+		&.group-id-104
 			color color_lime500
-		&:nth-child(5)
+		&.group-id-105
 			color color_orange500
-		&:nth-child(6)
+		&.group-id-106
 			color color_lightBlue500
-		&:nth-child(7)
+		&.group-id-107
 			color color_deepOrange500
-		&:nth-child(8)
+		&.group-id-108
 			color color_indigo500
 
 
