[ADDED] Ripple effect to select

--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -213,6 +213,8 @@ b1()
 			&.is-visible
 				visibility visible
 			.select-option
+				position relative
+				overflow hidden
 				padding 5px
 				margin-top 5px
 				&.selected
@@ -223,3 +225,27 @@ b1()
 					color #fff
 					background-color theme_primary
 					$shadow_2()
+				&:after
+					content ''
+					absolute top 50% left 50%
+					width 10px
+					height 10px
+					background rgba(255, 255, 255, .5)
+					opacity 0
+					border-radius 100%
+					transform scale(1, 1) translate(-50%)
+					transform-origin 50% 50%
+				&:active
+					&:after
+						animation ripple 1s ease-out
+
+	@keyframes ripple
+		0%
+			transform scale(0, 0)
+			opacity 1
+		20%
+			transform scale(25, 25)
+			opacity 1
+		100%
+			opacity 0
+			transform scale(40, 40)
