--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -96,6 +96,8 @@ b1()
 			border-radius 50%
 			border 2px #fff solid
 			text-align center
+			+mobile()
+				bottom 180px
 			// img
 			// 	border-radius 50%
 			// 	width 100%
