--- a/frontend_src/client/pages/Groups/Settings/Settings.styl
+++ b/frontend_src/client/pages/Groups/Settings/Settings.styl
@@ -4,23 +4,25 @@ b1()
 :local(.container)
 	height 100%
 	color inherit
-	padding 20px 30px
+	padding 10px 30px
 	margin-bottom 50px
 	overflow-y auto
 	+mobile()
 		margin-bottom 0
 
 	.ui-group-card
+		margin-right 10px
 		width 300px
 	
 	.ui-settings-card
-		width calc(100% - 350px)
+		margin-left 10px
+		width calc(100% - 320px)
 
 	.ui-group-card,
 	.ui-settings-card
 		float left
-		margin 0 10px
 		padding 0
+		margin-bottom 0
 		background-color #fff
 		color #4a4a4a
 		shadow()
