--- a/frontend_src/client/pages/Groups/Members/Members.styl
+++ b/frontend_src/client/pages/Groups/Members/Members.styl
@@ -3,18 +3,10 @@
 	.boxes-in-right
 		margin-left 20px
 		width 400px
-	
-	.member-boxes-wrapper
-		display flex
-		flex-direction row
-		flex 1
 
 	+below(rupture.desktop-cutoff)
 		display block
 		flex-direction column
-		.member-boxes-wrapper
-			flex-direction column
-			margin-top 20px
 		.boxes-in-right
 			margin 20px 0 20px 0
 			width 100%
@@ -247,6 +239,9 @@
 		&:hover
 			background-color rgba(#000, 0.07)
 			z-index 10
+		.is-important
+			absolute top 5px right 5px
+			font-size 16px
 		.name
 			font-size 16px
 			font-weight font_bold
