--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -72,24 +72,27 @@
 			border-bottom 1px solid rgba(151,151,151,0.12)
 			color #9B9B9B
 		.filter-button
+			float left
 			width 95px
 			height 28.5px
 			margin 5px
 			background-color #4A90E2
+			text-align center
 			color #FFFFFF
 			border-radius 28px
 			border 1px solid #D4D4D4
 			text-transform capitalize
 			transition  all 0.3s ease
+			cursor pointer
 			&.single
 				width 200px
 			&:hover
 				box-shadow 0 1px 2px 0 rgba(0,0,0,0.25)
-			&:focus
-				outline none
 			&.is-disabled
 				background-color #D4D4D4
 				color #929292
+			&.over
+				background-color #d32f2f
 		.selected-filters,
 		.not-selected-filters
 			padding 20px 10px
