--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -84,8 +84,11 @@
 			text-transform capitalize
 			transition  all 0.3s ease
 			cursor pointer
+			transform translate(0, 0)
 			&.single
 				width 200px
+			&:active
+				outline none
 			&:hover
 				box-shadow 0 1px 2px 0 rgba(0,0,0,0.25)
 			&.is-disabled
