[CHANGED] Color of filter button drop hint

--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -95,7 +95,7 @@
 				background-color #D4D4D4
 				color #929292
 			&.over
-				background-color #d32f2f
+				background-color color_green600
 		.selected-filters,
 		.not-selected-filters
 			padding 20px 10px
