[FIXED] Redux enabled filters state was not cleared on page change

--- a/frontend_src/client/pages/Groups/Members/Members.styl
+++ b/frontend_src/client/pages/Groups/Members/Members.styl
@@ -261,7 +261,7 @@
 			font-size 12px
 		.actions
 			display none
-			absolute right top bottom -1px
+			absolute right top -1px bottom -1px
 			+mobile() 
 				display flex
 				opacity 0
