[ADDED] Actions for notification

--- a/frontend_src/client/components/HeaderNotifications/HeaderNotifications.styl
+++ b/frontend_src/client/components/HeaderNotifications/HeaderNotifications.styl
@@ -7,24 +7,6 @@
     .ui-dropdown-toggle
         padding 8px 4px
 
-    .notification-item
-        padding 13px
-        border-bottom 1px rgba(#000, 0.07) solid
-        color #999
-        line-height 16px
-        &:hover
-            background-color rgba(#000, 0.07)
-
-    .notification-icon
-        width 48px
-        height 48px
-        margin-right 12px
-        border-radius 50%
-        overflow hidden
-    .notification-title
-        color #777
-        font-weight font_bold
-
     .mark-read-btn
         cursor pointer
         transform-origin center center
@@ -35,3 +17,76 @@
         &:active
             color darken(theme_primary, 8%)
             transform scale(0.9)
+
+    .nc-list-item
+        padding 4px 15px
+        border-bottom 1px rgba(#000, 0.07) solid
+        position relative
+        &:first-child
+            border-top 1px rgba(#000, 0.07) solid
+        &:hover
+            shadow()
+            +mobile()
+                box-shadow none
+            .actions
+                display flex
+        &.active
+            .actions
+                &.visible
+                    +mobile()
+                        opacity 1
+                        width auto
+        
+        .is-important
+            absolute top 5px right 5px
+            font-size 16px
+        
+        .name
+            font-size 16px
+            font-weight font_bold
+        
+        .subtext
+            margin-top -4px
+            font-size 12px
+
+        .actions
+            display none
+            absolute right top -1px bottom -1px
+            +mobile() 
+                display flex
+                opacity 0
+                width 0
+                transition opacity 0.7s ease-in-out
+            .reveal-action-icon
+                display flex
+                align-items center
+                padding 10px
+                background linear-gradient(to right, #56ccf2, #2f80ed)
+                color #fff
+                cursor pointer
+                .reverse
+                    transform rotate(180deg)
+                    transition all 0.3s ease-in-out
+                .normal
+                    transition all 0.3s ease-in-out
+            .buttons-container
+                display flex
+                align-items center
+                width 0
+                opacity 0
+                background-color #eee
+                transition opacity 0.7s ease-in-out
+                &.shown
+                    width auto
+                    opacity 1
+            .button
+                cursor pointer
+                font-size 20px
+                color #878787
+                padding 18px 10px
+
+        .ui-avatar,
+        .avatar-image
+            height 36px !important
+            width 36px !important
+            margin-right 12px
