--- a/frontend_src/client/components/ui/Dropdown/Dropdown.styl
+++ b/frontend_src/client/components/ui/Dropdown/Dropdown.styl
@@ -38,6 +38,7 @@ dd_list_height   = dd_list_inner_height + dd_footer_height
     .list-inner
         height dd_list_inner_height
         overflow-y auto
+        overflow-x hidden
 
     &.is-active
         max-height dd_list_height
