[TAIGA-591] Invite member to group [TAIGA-593] Owner archive button for group [TAIGA-594] Chnage member role font icon [TAIGA-597] Rename group settings page to profile

--- a/frontend_src/client/components/HeaderNotifications/HeaderNotifications.styl
+++ b/frontend_src/client/components/HeaderNotifications/HeaderNotifications.styl
@@ -4,6 +4,10 @@
 
     .notification-label
         padding 13px 8px 12px 8px
+        position relative
+        .has-notification
+            font-size 10px
+            absolute right 2px
     .ui-dropdown-toggle
         padding 8px 4px
 
@@ -61,7 +65,7 @@
                 display flex
                 align-items center
                 padding 10px
-                background linear-gradient(to right, #56ccf2, #2f80ed)
+                background-color theme_primary
                 color #fff
                 cursor pointer
                 .reverse
