--- a/frontend_src/client/components/NotificationCenter/NotificationCenter.styl
+++ b/frontend_src/client/components/NotificationCenter/NotificationCenter.styl
@@ -83,7 +83,8 @@
 			background-color #DB4D3F
 		&:hover
 			box-shadow 0 3px 8px 0 rgba(#000, 0.12)
-	.ui-avatar
+	.ui-avatar,
+	.avatar-image
 		height 36px !important
 		width 36px !important
 		margin-right 12px
