--- a/frontend_src/client/pages/Groups/Members/Members.styl
+++ b/frontend_src/client/pages/Groups/Members/Members.styl
@@ -139,9 +139,15 @@
 		transition all 0.32s $ease-in-out-swift
 
 		.group-item
-			font-size 24px
+			font-size 18px
 			padding 4px 8px
 			animation fadeIn 0.42s
+		
+		.invitebtn
+			cursor pointer
+
+		.not-invited
+			color #4caf50
 
 	.subscribe-box
 		display flex
