--- a/frontend_src/client/pages/Groups/Settings/Settings.styl
+++ b/frontend_src/client/pages/Groups/Settings/Settings.styl
@@ -123,9 +123,24 @@ b1()
 		.card-action
 			color #fff
 			background-color color_cyan500
-			font-size 20px
+			font-size 16px
 			text-align center
 			padding 6px 0
+		
+		.delete-modal-content
+			p
+				font-size 16px
+				font-weight bold
+
+		.btn-group
+			.btn-yes
+				color #fff
+				margin-right 10px
+				background-color color_red400
+			.btn-no
+				color #fff
+				background-color color_green500
+
 
 	.group-type-art
 		.card-header
