--- a/frontend_src/client/components/SubHeader/SubHeader.styl
+++ b/frontend_src/client/components/SubHeader/SubHeader.styl
@@ -25,31 +25,34 @@
 		+mobile()
 			width auto
 		.header-search-input
-			width 100%
+			absolute right
+			width 75%
 			height 33px
-			padding 5px
+			padding 10px
 			background-color #FFFFFF
 			color #9B9B9B
 			border 1px solid #E3E7EC
-			border-radius 1px
+			border-radius 20px
 			box-shadow none
 			font-size 12px
+			transition width 0.3s ease-in-out
 			&:focus
 				outline none
+				width 100%
 		.header-search-button
 			background none
 			border none
 			color #9B9B9B
-			absolute top 3px right
+			absolute top 3px right 5px
 	
 	.header-button
-		width 33px
+		width 55px
 		height 33px
 		color #9B9B9B
 		margin-right 5px
 		background none
 		border 1px solid #E3E7EC
-		border-radius 1px
+		border-radius 20px
 		box-shadow none
 		&:focus
 			outline none
@@ -72,6 +75,9 @@
 			border-bottom 1px solid rgba(151,151,151,0.12)
 			color #9B9B9B
 		.filter-button
+			font-size 11px
+			font-weight bold
+			line-height 2.5
 			float left
 			width 95px
 			height 28.5px
