--- a/frontend_src/client/pages/Groups/Groups.styl
+++ b/frontend_src/client/pages/Groups/Groups.styl
@@ -25,6 +25,7 @@ b1()
 		display flex
 		flex-direction column
 		clearfix()
+		cursor pointer
 		&:hover
 			.group-header-image
 				transform scale(1.2)
@@ -183,8 +184,8 @@ b1()
 				background-color color_deepPurple500
 		.card-action
 			background-color color_deepPurple500
-		
-	
+
+
 	.form-group
 		position relative
 		margin-bottom 30px
