--- a/frontend_src/client/components/NotificationCenter/NotificationCenter.styl
+++ b/frontend_src/client/components/NotificationCenter/NotificationCenter.styl
@@ -27,6 +27,8 @@
 		.is-important
 			absolute top 5px right 5px
 			font-size 16px
+		.details
+			width 100%
 		.name
 			font-size 16px
 			font-weight font_bold
@@ -36,7 +38,7 @@
 		.actions
 			display none
 			absolute right top -1px bottom -1px
-			+mobile() 
+			+mobile()
 				display flex
 				opacity 0
 				width 0
@@ -45,7 +47,7 @@
 				display flex
 				align-items center
 				padding 10px
-				background linear-gradient(to right, #56ccf2, #2f80ed)
+				background-color #3D3D3D
 				color #fff
 				cursor pointer
 				.reverse
@@ -60,6 +62,7 @@
 				opacity 0
 				background-color #eee
 				transition opacity 0.7s ease-in-out
+				box-shadow inset 5px 0px 10px rgba(0, 0, 0, .23)
 				&.shown
 					width auto
 					opacity 1
