--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,7 @@
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
                         <!-- Messages: style can be found in dropdown.less-->
-                        <!-- TODO: Messagging and Notification system in V3 -->
+                        <!-- TODO:460 Messagging and Notification system in V3-->
                         <li class="dropdown messages-menu" id="navmessages">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-comment-o"></i>
@@ -249,7 +249,7 @@
                                     {% trans "Hello User" %}
                                 {% endif %}
                             </p>
-                            <!-- TODO: logic for setting status -->
+                            <!-- TODO:1110 logic for setting status-->
                             <a href="#"><i class="fa fa-circle text-success" style="color: #7ED321"></i> {% trans "Online" %}</a>
                         </div>
                     </div>
