--- a/frontend_src/client/pages/Groups/Members/Members.styl
+++ b/frontend_src/client/pages/Groups/Members/Members.styl
@@ -100,6 +100,10 @@
 			.name
 				font-size 16px
 				font-weight font_bold
+				.username
+					font-size 10px
+					color #ccc
+					margin-left 5px
 			.status
 				margin-top -4px
 				position relative
@@ -142,7 +146,7 @@
 			font-size 18px
 			padding 4px 8px
 			animation fadeIn 0.42s
-		
+
 		.invitebtn
 			cursor pointer
 
