--- a/frontend_src/client/pages/Groups/MembersManagement/Members.styl
+++ b/frontend_src/client/pages/Groups/MembersManagement/Members.styl
@@ -100,6 +100,10 @@
 			.name
 				font-size 16px
 				font-weight font_bold
+				.username
+					font-size 10px
+					color #ccc
+					margin-left 5px
 			.status
 				margin-top -4px
 				position relative
